--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="container">
     <h1>Welcome to Roblox Verification</h1>
-    <p>To get started, please read our <a href="https://your-username.github.io/roblox-verification/tos.html" target="_blank">Terms of Service</a> and <a href="https://your-username.github.io/roblox-verification/privacy-policy.html" target="_blank">Privacy Policy</a>.</p>
+    <p>To get started, please read our <a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Terms of Service</a> and <a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Privacy Policy</a>.</p>
     <p>By proceeding, you agree to the following:</p>
     <ul>
         <li>Abide by our Terms of Service.</li>
