--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <li>Ensure you follow the Privacy Policy and understand how your data is used.</li>
     </ul>
     <div class="links">
-        <a href="https://your-username.github.io/roblox-verification/tos.html" target="_blank">Read the Terms of Service</a>
-        <a href="https://your-username.github.io/roblox-verification/privacy-policy.html" target="_blank">Read the Privacy Policy</a>
+        <a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Read the Terms of Service</a>
+        <a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Read the Privacy Policy</a>
     </div>
 </div>
 
