--- a/index.html
+++ b/index.html
@@ -3,67 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox Verification</title>
+    <title>Roblox-Discord Verification</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            text-align: center;
+            padding: 20px;
         }
         .container {
-            background-color: #fff;
+            max-width: 500px;
+            margin: auto;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            border-radius: 10px;
-            width: 80%;
-            max-width: 600px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
         }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .links {
-            margin-top: 20px;
-        }
-        .links a {
-            display: block;
-            margin: 10px 0;
+        button {
+            padding: 10px 15px;
             font-size: 16px;
+            cursor: pointer;
+            border: none;
+            background-color: #007bff;
+            color: white;
+            border-radius: 5px;
+        }
+        button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+        .tos-container {
+            text-align: left;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>Welcome to Roblox Verification</h1>
-    <p>To get started, please read our <a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Terms of Service</a> and <a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Privacy Policy</a>.</p>
-    <p>By proceeding, you agree to the following:</p>
-    <ul>
-        <li>Abide by our Terms of Service.</li>
-        <li>Ensure you follow the Privacy Policy and understand how your data is used.</li>
-    </ul>
-    <div class="links">
-        <a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Read the Terms of Service</a>
-        <a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Read the Privacy Policy</a>
+    <div class="container">
+        <h2>Roblox-Discord Verification</h2>
+        <p>To proceed with verification, you must agree to our <a href="/tos.html" target="_blank">Terms of Service</a> and <a href="/privacy.html" target="_blank">Privacy Policy</a>.</p>
+        
+        <div class="tos-container">
+            <input type="checkbox" id="agreeCheckbox">
+            <label for="agreeCheckbox">I agree to the Terms of Service and Privacy Policy.</label>
+        </div>
+
+        <br>
+        <button id="verifyBtn" disabled onclick="startVerification()">Start Verification</button>
     </div>
-</div>
+
+    <script>
+        document.getElementById('agreeCheckbox').addEventListener('change', function() {
+            document.getElementById('verifyBtn').disabled = !this.checked;
+        });
+
+        function startVerification() {
+            window.location.href = "/verify";
+        }
+    </script>
 
 </body>
 </html>
