--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         });
 
         function startVerification() {
-            window.location.href = "/verify";
+            window.location.href = "https://silver-chainsaw-xx65r5q9jvr29x7p-5000.app.github.dev/verify";
         }
     </script>
 
