--- a/index.html
+++ b/index.html
@@ -18,23 +18,14 @@
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
         }
-        button {
-            padding: 10px 15px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            background-color: #007bff;
-            color: white;
-            border-radius: 5px;
-        }
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-        .tos-container {
-            text-align: left;
-            margin-top: 10px;
-        }
     </style>
 </head>
+<body>
+    <div class="container">
+        <h2>Roblox-Discord Verification Is Down</h2>
+        <p><a href="/tos.html" target="_blank">Terms of Service</a></p>
+        <br>
+        <p><a href="/privacy.html" target="_blank">Privacy Policy</a></p>
+    </div>
+</body>
 </html>
