--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
     <div class="container">
         <h2>Roblox-Discord Verification Is Down</h2>
-        <p><a href="/tos.html" target="_blank">Terms of Service</a></p>
+        <p><a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Terms of Service</a></p>
         <br>
-        <p><a href="/privacy.html" target="_blank">Privacy Policy</a></p>
+        <p><a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Privacy Policy</a></p>
     </div>
 </body>
 </html>
