--- a/Placeholder/index.html
+++ b/Placeholder/index.html
@@ -41,11 +41,11 @@
 
     <div class="container">
         <h2>Roblox-Discord Verification</h2>
-        <p>To proceed with verification, you must agree to our <a href="/tos.html" target="_blank">Terms of Service</a> and <a href="/privacy.html" target="_blank">Privacy Policy</a>.</p>
+        <p>To proceed with verification, you must agree to our <a href="https://annoynumus9.github.io/APS_Webpage/tos" target="_blank">Terms of Service</a> and <a href="https://annoynumus9.github.io/APS_Webpage/Privacy" target="_blank">Privacy Policy</a>.</p>
         
         <div class="tos-container">
             <input type="checkbox" id="agreeCheckbox">
-            <label for="agreeCheckbox">I agree to the Terms of Service and Privacy Policy.</label>
+            <label for="agreeCheckbox">I agree that I read and agree the Terms of Service and Privacy Policy.</label>
         </div>
 
         <br>
