--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <br>
-        <button id="verifyBtn" disabled onclick="window.location.href='https://silver-chainsaw-xx65r5q9jvr29x7p-5000.app.github.dev/verify'">Start Verification</button>
+        <button id="verifyBtn" disabled onclick="window.location.href='https://auroraplasmasystems.up.railway.app/verify'">Start Verification</button>
     </div>
 
     <script>
