--- a/Privacy.html
+++ b/Privacy.html
@@ -1,60 +1,88 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Privacy Policy</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                line-height: 1.6;
-                margin: 20px;
-            }
-            h1 {
-                text-align: center;
-                color: #333;
-            }
-            p {
-                margin-bottom: 15px;
-            }
-            .container {
-                width: 80%;
-                margin: 0 auto;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Privacy Policy</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        ul {
+            margin-bottom: 15px;
+            list-style-type: none;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+        }
+        h2 {
+            color: #2E8B57;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
 
-            <h2>1. Introduction</h2>
-            <p>At Auro! Incorporated, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you use our verification service.</p>
+        <h2>1. Introduction</h2>
+        <p>At Auro! Incorporated, we value and respect your privacy. This Privacy Policy describes the information we collect, how we use it, and the precautions we take to safeguard your personal data when you use our verification service.</p>
+        <p>By using our service, you agree to the terms outlined in this policy. We are committed to being transparent about our data practices and to ensuring that your personal data is handled securely.</p>
 
-            <h2>2. Data Collection</h2>
-            <p>When using our service, we collect the following:</p>
-            <ul>
-                <li><strong>Discord ID</strong>: Used for identification purposes.</li>
-                <li><strong>Roblox ID</strong>: Linked with your Discord ID for verification.</li>
-            </ul>
+        <h2>2. Data Collection</h2>
+        <p>We collect the following personal information when you use our verification service:</p>
+        <ul>
+            <li><strong>Discord ID</strong>: A unique identifier assigned to your Discord account. This is necessary to link your Discord account to the Roblox account for verification purposes.</li>
+            <li><strong>Roblox ID</strong>: A unique identifier for your Roblox account. This is linked with your Discord ID for the purpose of confirming that your Roblox account is correctly associated with your Discord account.</li>
+        </ul>
+        <p>We do not collect any sensitive personal information such as passwords, addresses, or payment details.</p>
 
-            <h2>3. Data Use</h2>
-            <p>We use your data to:</p>
-            <ul>
-                <li>Verify your Roblox account with your Discord account.</li>
-                <li>Ensure the integrity of the verification process.</li>
-            </ul>
+        <h2>3. Data Use</h2>
+        <p>The information we collect is used for the following purposes:</p>
+        <ul>
+            <li><strong>Account Verification</strong>: We use your Discord ID and Roblox ID to verify that both accounts belong to the same user, facilitating the linking process.</li>
+            <li><strong>Service Integrity</strong>: We use the data to ensure the integrity and accuracy of the verification process, ensuring that your Discord account matches the Roblox account for security purposes.</li>
+            <li><strong>Support and Communication</strong>: In cases where you request assistance or clarification, we may use your data to provide support or answer questions related to your verification status.</li>
+        </ul>
 
-            <h2>4. Data Retention</h2>
-            <p>We retain your Discord and Roblox IDs as long as you are using our verification system. However, if you request to delete your data, we will remove all personal data except for your Discord and Roblox IDs, which will be retained for verification purposes.</p>
+        <h2>4. Data Retention</h2>
+        <p>We retain your Discord ID and Roblox ID as long as you are using our verification service. This information is kept to ensure the accuracy of the verification process. In the event that you choose to stop using the service, your data will be retained for a period of time for auditing and verification purposes.</p>
+        <p>Once you request data deletion, we will remove all personal information except for your Discord and Roblox IDs. These IDs will be retained only for security and audit purposes and will not be used for any other purpose.</p>
 
-            <h2>5. Data Deletion</h2>
-            <p>If you wish to have your data deleted, please contact us directly through auroraplasmasystems@gmail.com. You may request the deletion of all your data, but we will still retain your Discord ID and Roblox ID for security and verification purposes.</p>
+        <h2>5. Data Deletion</h2>
+        <p>You have the right to request the deletion of your data at any time. To request deletion, please contact us directly at <a href="mailto:auroraplasmasystems@gmail.com">auroraplasmasystems@gmail.com</a>.</p>
+        <p>Upon receiving your request, we will promptly delete all personal data linked to your account, except for your Discord ID and Roblox ID. These IDs will be retained to maintain the integrity of the verification system and for security purposes only. This retention is necessary to ensure that the verification process remains accurate and transparent.</p>
 
-            <h2>6. Security</h2>
-            <p>We take reasonable steps to protect your data but cannot guarantee 100% security due to the nature of the internet.</p>
+        <h2>6. Security</h2>
+        <p>We take your privacy and the security of your data seriously. Our platform implements industry-standard security measures to protect your personal information from unauthorized access, alteration, or destruction. These measures include encryption, secure data storage, and regular audits to ensure the security of our systems.</p>
+        <p>However, please be aware that while we take all reasonable steps to protect your data, no system can guarantee 100% security. We cannot ensure the security of your data during transmission or storage due to the inherent risks associated with the internet.</p>
 
-            <h2>7. Contact Us</h2>
-            <p>If you have any questions about your data or this Privacy Policy, please contact us at auroraplasmasystems@gmail.com.</p>
-        </div>
-    </body>
-    </html>
+        <h2>7. Data Sharing</h2>
+        <p>We do not sell, rent, or share your personal information with third parties, except in the following cases:</p>
+        <ul>
+            <li><strong>With your consent</strong>: If you consent to share your data with a third party for a specific purpose.</li>
+            <li><strong>Legal Compliance</strong>: If required by law, we may share your data with law enforcement or other government agencies.</li>
+        </ul>
+        <p>We do not use your personal data for targeted advertising or any other commercial purpose.</p>
+
+        <h2>8. Changes to this Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time to reflect changes in our practices, technologies, or legal obligations. If we make significant changes, we will notify you through our service or other appropriate means. Please review this Privacy Policy regularly to stay informed about how we are protecting your data.</p>
+
+        <h2>9. Contact Us</h2>
+        <p>If you have any questions, concerns, or requests related to your personal data or this Privacy Policy, please contact us at <a href="mailto:auroraplasmasystems@gmail.com">auroraplasmasystems@gmail.com</a>.</p>
+
+    </div>
+</body>
+</html>
