--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Discord Embed Metadata -->
     <meta property="og:title" content="Roblox-Discord Verification" />
     <meta property="og:description" content="Start the secure verification process to link your Roblox account with Discord." />
-    <meta property="og:image" content="https://yourcdn.com/logo.png" />
+    <meta property="og:image" content="https://annoynumus9.github.io/APS_Webpage/Logo.png" />
     <meta property="og:url" content="https://annoynumus9.github.io/APS_Webpage/" />
     <meta name="theme-color" content="#007bff" />
 
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Roblox-Discord Verification" />
     <meta name="twitter:description" content="Start the secure verification process to link your Roblox account with Discord." />
-    <meta name="twitter:image" content="https://yourcdn.com/logo.png" />
+    <meta name="twitter:image" content="https://annoynumus9.github.io/APS_Webpage/Logo.png" />
 
     <style>
         body {
