--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="Roblox-Discord Verification" />
     <meta property="og:description" content="Start the secure verification process to link your Roblox account with Discord." />
     <meta property="og:image" content="https://annoynumus9.github.io/APS_Webpage/Logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://annoynumus9.github.io/APS_Webpage/" />
     <meta name="theme-color" content="#007bff" />
 
